Update portfolio with new project images and content
- Added DApp Planner project images (cover.jpg, demo.gif)
- Added TCG DApp project images
- Added Yield Sphere project images
- Updated project MDX files with new content
- Removed old placeholder project images
- Updated next.config.mjs configuration

--- a/src/app/work/projects/DApp-planner.mdx
+++ b/src/app/work/projects/DApp-planner.mdx
@@ -3,8 +3,8 @@ title: "DApp Planner: Generate Smart DApp Specs with AI"
 publishedAt: "2025-07-19"
 summary: "An AI-powered tool that helps developers plan decentralized applications (DApps) like DEXs on Ethereum with custom features, tech stacks, and release phases — instantly generated with large language models."
 images:
-  - "/images/projects/dapp-planner/cover.jpg"
-  - "/images/projects/dapp-planner/demo.gif"
+  - "/images/projects/dapp-planner/dapp_planner_dark.svg"
+  - "/images/projects/dapp-planner/dapp_planner_light.svg"
 team:
   - name: "Muhammad Helmi Jamil"
     role: "Full Stack Blockchain Developer"
