--- a/src/app/work/projects/TCG-DApp.mdx
+++ b/src/app/work/projects/TCG-DApp.mdx
@@ -3,14 +3,14 @@ title: "Trading Card Game DApp"
 publishedAt: "2025-05-22"
 summary: "A decentralized trading card game platform with NFT-based heroes, an ERC20 token, and an integrated marketplace."
 images:
-  - "/images/projects/dapp-planner/cover.jpg"
-  - "/images/projects/dapp-planner/demo.gif"
+  - "/images/projects/TCG/TCG1.jpg"
+  - "/images/projects/TCG/TCG2.jpg"
 team:
   - name: "Muhammad Helmi Jamil"
     role: "Full Stack Blockchain Developer"
     avatar: "/images/avatar.jpg"
     linkedIn: "https://www.linkedin.com/in/helmi-jamil"
-link: "https://dapp-planner.vercel.app/"
+link: "https://folk-battle-of-heroes.vercel.app/"
 ---
 
 ## Overview
@@ -33,7 +33,7 @@ The Trading Card Game (TCG) DApp is a blockchain-based gaming platform that allo
 
 ## Status
 
-Core marketplace features are complete. Game mechanics like turn-based battles and sound effects are in progress.
+
 
 
 
