--- a/src/app/work/projects/yield-sphere.mdx
+++ b/src/app/work/projects/yield-sphere.mdx
@@ -3,8 +3,8 @@ title: "YieldSphere: A Yield Farming DApp for Exploring DeFi Opportunities"
 publishedAt: "2025-07-19"
 summary: "A fully on-chain yield farming DApp built with Once UI and deployed to a testnet. Features token staking, rewards distribution, and a clean, animated user interface for DeFi users."
 images:
-  - "/images/projects/yieldsphere/cover.jpg"
-  - "/images/projects/yieldsphere/demo.gif"
+  - "/images/projects/yieldsphere/Yield Sphere 1.svg"
+  - "/images/projects/yieldsphere/Yield Sphere 2.svg"
 team:
   - name: "Muhammad Helmi Jamil"
     role: "Smart Contract & Frontend Developer"
