Add GitHub link button to AI Trading Bot project

--- a/src/app/work/projects/TCG-DApp.mdx
+++ b/src/app/work/projects/TCG-DApp.mdx
@@ -1,10 +1,10 @@
 ---
 title: "Trading Card Game DApp"
-publishedAt: "2025-05-22"
+publishedAt: "2024-10-15"
 summary: "A decentralized trading card game platform with NFT-based heroes, an ERC20 token, and an integrated marketplace."
 images:
-  - "/images/projects/TCG/TCG1.jpg"
-  - "/images/projects/TCG/TCG2.jpg"
+  - "/images/projects/TCG/TCG1.svg"
+  - "/images/projects/TCG/TCG2.svg"
 team:
   - name: "Muhammad Helmi Jamil"
     role: "Full Stack Blockchain Developer"
@@ -31,7 +31,27 @@ The Trading Card Game (TCG) DApp is a blockchain-based gaming platform that allo
 * View metadata from `tokenURI`
 * Responsive layout with dark mode
 
-## Status
+## 🗺️ Roadmap
+
+### Phase 1: Core Game ✅
+- [x] Turn-based battle system
+- [x] Hero selection and stats
+- [x] Card drawing mechanics
+- [x] AI opponent
+
+### Phase 2: Blockchain Integration 🚧
+- [ ] ERC20 game token contract
+- [ ] ERC721 hero NFT contract
+- [ ] Wallet connection
+- [ ] Token rewards system
+
+### Phase 3: Marketplace 📋
+- [ ] NFT trading platform
+- [ ] Auction system
+- [ ] Rarity and pricing mechanics
+- [ ] Community features
+
+
 
 
 
