Update TCG-DApp project: add third image and correct file extensions to SVG

--- a/src/app/work/projects/TCG-DApp.mdx
+++ b/src/app/work/projects/TCG-DApp.mdx
@@ -4,6 +4,7 @@ publishedAt: "2024-10-15"
 summary: "A decentralized trading card game platform with NFT-based heroes, an ERC20 token, and an integrated marketplace."
 images:
   - "/images/projects/TCG/TCG1.svg"
+  - "/images/projects/TCG/TCG3.svg"
   - "/images/projects/TCG/TCG2.svg"
 team:
   - name: "Muhammad Helmi Jamil"
